Fixed background bleed

--- a/src/featherlight.css
+++ b/src/featherlight.css
@@ -12,6 +12,7 @@
 		/* dimensions: spanning the background from edge to edge */
 		position:fixed;
 		top: 0; right: 0; bottom: 0; left: 0;
+		z-index: 2;
 
 		/* position: centering content */
 		text-align: center;
